@@ -1,3 +1,7 @@
+shmuel 2024-05-19 11:12:10+03:00 - build 833
+
+1. LuaFAR: refactoring.
+
 shmuel 2024-05-15 17:51:04+03:00 - build 832
 
 1. Add command lm:browser (or macro:browser).
